--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8114,3 +8114,7 @@ td {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
 }
+.no-order {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
